Fix video bg overflow

--- a/src/app/modules/widgets/shared/shared.scss
+++ b/src/app/modules/widgets/shared/shared.scss
@@ -703,6 +703,7 @@ span.input-down-sm-lab {
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: hidden;
 }
 
 .absolute-bg-content .video-bg {
